# AndroidSecurity

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/chenenyu/security/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/chenenyu/security/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
cer/: gradleStudy  xiaopenyou.jks
gradle/wrapper/: gradle-wrapper.properties
signature_checker/: CMakeLists.txt  build.gradle
signature_checker/src/androidTest/java/com/chenenyu/security/: ExampleInstrumentedTest.java
signature_checker/src/androidTest/java/com/chenenyu/security/signature/checker/: ExampleInstrumentedTest.java
signature_checker/src/main/: AndroidManifest.xml
signature_checker/src/main/cpp/: native-security.cpp  native-security.h
signature_checker/src/main/java/com/chenenyu/security/: Security.java
signature_checker/src/test/java/com/chenenyu/security/security/signature/checker/: ExampleUnitTest.java
